feat: add azure oidc deploy and sqlserver schema migrations

--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -7,7 +7,16 @@
     }
   },
   "ConnectionStrings": {
-    "Sqlite": "Data Source=career-agent.db"
+    "Sqlite": "Data Source=career-agent.db",
+    "SqlServer": ""
+  },
+  "Database": {
+    "Provider": "Sqlite"
+  },
+  "Cors": {
+    "AllowedOrigins": [
+      "http://localhost:4200"
+    ]
   },
   "SerpApi": {
     "ApiKey": "",
