--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": false
   },
   "newProjectRoot": "projects",
   "projects": {
@@ -58,8 +59,8 @@
           "configurations": {
             "production": {
               "define": {
-                "import.meta.env.STATIC_DATA": "true",
-                "import.meta.env.API_URL": "'./data'"
+                "import.meta.env.STATIC_DATA": "false",
+                "import.meta.env.API_URL": "'/api'"
               },
               "budgets": [
                 {
